# faf-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  project.faf
.github/workflows/: audit.yml  ci.yml  publish-crate.yml
crates/faf-core/: Cargo.toml  README.md
crates/faf-core/src/: compress.rs  discovery.rs  lib.rs  parser.rs  score.rs  validator.rs
crates/faf-fafb/: BINARY-FORMAT.md  CHANGELOG.md  Cargo.toml  README.md
crates/faf-fafb/examples/: compile.rs
crates/faf-fafb/src/: canon.rs  compile.rs  error.rs  header.rs  lib.rs  section.rs  string_table.rs
crates/faf-fafb/tests/: tier1_brake.rs  tier2_engine.rs  tier3_aero.rs
crates/faf-fafb/tests/parity/: golden-input.faf  golden.fafb
crates/faf-kernel/: CHANGELOG.md  Cargo.toml  README.md
crates/faf-kernel/examples/: score.rs
crates/faf-kernel/src/: compress.rs  discovery.rs  lib.rs  parser.rs  score.rs  types.rs  validator.rs
crates/faf-kernel/tests/: tier1_brake.rs  tier2_engine.rs  tier3_aero.rs
crates/faf-kernel/tests/parity/: cli-partial.faf  cli-trophy.faf  enterprise-full.faf  minimal-raw.faf
crates/faf-rust-sdk/: CHANGELOG.md  Cargo.toml  FAFB-DESIGN-NOTES.md  README.md  project.faf
crates/faf-rust-sdk/.github/workflows/: ci.yml
crates/faf-rust-sdk/src/: axum.rs  lib.rs
crates/faf-rust-sdk/src/binary/: error.rs  header.rs  mod.rs  section.rs
crates/faf-rust-sdk/tests/: WJTTC-TEST-SUITE.md  tier1_security_validation.rs
crates/faf-wasm-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/faf-wasm-sdk/src/: fafb_json.rs  lib.rs
src/: axum.rs  compress.rs  discovery.rs  lib.rs  parser.rs  validator.rs
src/binary/: chunk_registry.rs  compile.rs  error.rs  flags.rs  header.rs  mod.rs  priority.rs  section.rs  section_type.rs
tests/: axum_integration.rs  tier1_security_validation.rs  tier2_core_functionality.rs  tier3_edge_cases_polish.rs
