[package]
name = "faf-rust-sdk"
version = "2.0.0"
edition = "2021"
authors = ["wolfejam <wolfejam@faf.one>"]
description = "Rust SDK for FAF (Foundational AI-context Format) - IANA-registered application/vnd.faf+yaml"
license = "MIT"
repository = "https://github.com/Wolfe-Jam/faf-rust-sdk"
homepage = "https://faf.one"
documentation = "https://docs.rs/faf-rust-sdk"
readme = "README.md"
keywords = ["faf", "ai-context", "yaml", "mcp", "grok"]
categories = ["parsing", "data-structures"]
exclude = ["target/", ".git/", "*.lock"]

[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:http"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
thiserror = "1.0"
byteorder = "1.5"
crc32fast = "1.3"
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
http = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
