[package]
name = "faf-core"
version = "1.0.0"
description = "The FAF kernel — parse, validate, and score .faf files (IANA application/vnd.faf+yaml). One kernel, many shells."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://faf.one"
keywords = ["faf", "ai-context", "yaml", "scoring", "mk4"]
categories = ["parser-implementations", "development-tools"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
