[package]
name = "faf-rust-sdk"
version = "3.0.0"
description = "Persistent Project Context for Rust. IANA-registered .faf format — the facade over faf-kernel (parse/validate/score) + faf-fafb (binary v2)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://faf.one"
documentation = "https://docs.rs/faf-rust-sdk"
readme = "README.md"
keywords = ["faf", "ai-context", "yaml", "mcp", "grok"]
categories = ["parsing", "data-structures"]

[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:http"]

[dependencies]
faf-kernel = { version = "1.0", path = "../faf-kernel" }
faf-fafb = { version = "1.0", path = "../faf-fafb" }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
http = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
